--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a id="skip" href="#main-content">Skip to Main Content</a>
                 <nav>
                     <ul>
-                        <li><a href="#about">About</a></li>
+                        <li class="hide"><a href="#about">About</a></li>
                         <li><a href="#services">Services</a></li>
                         <li><a href="#testimonials">Testimonials</a></li>
                         <li><a href="#contact">Contact Us</a></li>
